# mtgjson-rust-sdk

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
src/model/: abstract_card.rs  atomics.rs  atomics_collection.rs  atomics_lookup.rs  card.rs  card_attribute.rs  card_deck.rs  colors.rs  cost.rs  deck.rs  disambiguator.rs  foreign_data.rs  identifiers.rs  leadership_skills.rs  legalities.rs  meta.rs  minimal_card.rs  mod.rs  purchase_urls.rs  ruling.rs  subtypes.rs  supertypes.rs  symbols.rs  types.rs
src/model/deck_sites/: mod.rs  moxfield.rs
src/mtgjson/: atomics.rs  card.rs  foreign_data.rs  identifiers.rs  leadership_skills.rs  legalities.rs  meta.rs  mod.rs  purchase_urls.rs  ruling.rs
src/utils/: mod.rs  number_deserializer.rs  response.rs
tests/: file_model_atomic.rs  lookup_tests.rs  split.json  test_deck_scrapers.rs  tmp  tmp.json
tests/data/: PersonalDecoy.json  SingleCard.json  SingleCreature.json  SingleDFC.json  SingleSimpleCreature.json  SingleSplit.json  marchesa_decklists.json
