[package]
name = "mtgjson"
version = "0.0.0"
edition = "2021"
license = "GPL-3.0"
#rust-version = "1.58.1"
authors = ["TylerBloom <tylerbloom2222@gmail.com>"]


[dependencies]
dashmap = { version = "5.0" }
regex = { version = "1.5.4" }
hashbag = { version = "0.1.4" }
lazy_static = { version = "1.4.0" }
hyper = { version = "0.14.16", features = ["client", "http1", "tcp"] }
hyper-tls = { version = "0.5.0" }
uuid = { version = "0.8", features = ["v5"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.68" }
serde_with = { version = "1.5.1" }

[dev-dependencies]
tokio = { version = "1.15.0", features = ["rt", "macros"] }
