[package]
name = "mtgjson"
version = "0.0.0"
edition = "2021"
license = "GPL-3.0"
#rust-version = "1.58.1"
authors = ["TylerBloom <tylerbloom2222@gmail.com>"]


[dependencies]
regex = { version = "1.5.4" }
hashbag = { version = "0.1.5", features = ["serde"] }
lazy_static = { version = "1.4.0" }
uuid = { version = "0.8", features = ["v5"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.68" }
serde_with = { version = "1.5.1" }

# Why is this here... concurrent solutions should either be optional or handled by users
#dashmap = { version = "5.0" }

# Make these optional
hyper = { version = "0.14.16", features = ["client", "http1", "tcp"] }
hyper-tls = { version = "0.5.0" }

[dev-dependencies]
tokio = { version = "1.15.0", features = ["rt", "macros"] }
